[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lizeur"
authors = [{name = "Charlie Boutier", email = "charlie.boutier7@gmail.com"}]
version = "0.1.0"
description = "Lizeur is a MCP server to be able to get content from PDFs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.4",
    "mistralai>=0.0.10",
]
urls = {Homepage = "https://github.com/SilverBzH/lizeur"}

[project.scripts]
lizeur = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]